# subxt

artifacts/: cord.scale  substrate.scale
examples/: Cargo.toml
examples/examples/: storage_fetch.rs  storage_iterating.rs  subxt_codegen.rs  tx_basic.rs  tx_status_stream.rs  tx_with_params.rs
subxt/src/config/: cord.rs  mod.rs
